# python-note-cli

./: .gitignore  main.py  my-awesome-project.code-workspace  pyproject.toml
src/research_digest/: agent.py  cli.py  db.py  model.py
src/research_digest/error_models/: db_error.py
tests/: db_test.py  test_summarizer.py
